base/products/deployment.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: products  
  labels:  
    app: products  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: products  
  template:  
    metadata:  
      labels:  
        app: products  
    spec:  
      containers:  
      - name: products 
        image: null32sys/products:1.0.0  
        imagePullPolicy: Always  
        ports:  
        - containerPort: 8080  
        resources:  
          requests:  
            cpu: 100m  
            memory: 128Mi  
          limits:  
            cpu: 200m  
            memory: 256Mi
