base/products/service.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: products  
spec:  
  type: LoadBalancer  
  ports:  
  - port: 80  
    targetPort: 8080  
    protocol: TCP  
  selector:  
    app: products
